// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`builders experimental classProperty should validate 1`] = `
Object {
  "computed": false,
  "decorators": null,
  "key": Object {
    "type": "StringLiteral",
    "value": "test",
  },
  "static": false,
  "type": "ClassProperty",
  "typeAnnotation": null,
  "value": Object {
    "type": "NumericLiteral",
    "value": 1,
  },
}
`;

exports[`builders experimental classProperty should validate 2`] = `
Object {
  "computed": false,
  "decorators": null,
  "key": Object {
    "type": "StringLiteral",
    "value": "test",
  },
  "static": true,
  "type": "ClassProperty",
  "typeAnnotation": null,
  "value": Object {
    "type": "NumericLiteral",
    "value": 1,
  },
}
`;
